Fix scrollbars issue for reviews

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -361,14 +361,20 @@ section {
     }
 
     &__review {
-      width: 40vw;
+      width: 40%;
       height: 70%;
       background-color: rgba(0, 0, 0, 0.6);
-      overflow: scroll;
+      overflow: hidden;
       cursor: pointer;
       color: $secondary-color;
       margin: 0 8px;
       display: none;
+
+      &__container {
+        width: calc(100% + 18px);
+        overflow-y: scroll;
+        height: 100%;
+      }
 
       &__author {
         font-size: 1.2rem;
